--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
   },
   "dependencies": {
     "apidoc": "^0.17.7",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.1.0",
     "express": "~4.16.0",
-    "morgan": "~1.9.0"
+    "express-session": "^1.15.6",
+    "http-errors": "^1.7.1",
+    "mongoose": "^5.3.14",
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0"
   }
 }
