setup user schema

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "apidoc": "^0.17.7",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
@@ -15,6 +16,7 @@
     "express-session": "^1.15.6",
     "http-errors": "^1.7.1",
     "mongoose": "^5.3.14",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0"
